<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".UserPages.RegisterActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        app:navigationIcon="@drawable/ic_back" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/toolbar"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:orientation="vertical"
        android:paddingHorizontal="30dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/signup_image_layout"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="8dp"
                android:orientation="vertical">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:src="@drawable/default_user_image" />

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:text="@string/text_signup_message"
                android:textColor="#696969"
                android:textSize="16sp"
                android:textStyle="bold" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_name"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_name"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:minWidth="320dp"
                    android:minHeight="45dp"
                    android:paddingStart="12dp"
                    android:singleLine="true" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtViewValidateName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="Required"
                android:textSize="12dp"
                android:visibility="invisible" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="12dp"
                    android:layout_marginRight="12dp"
                    android:background="@android:color/transparent"
                    android:drawableStart="@drawable/ic_mail"
                    android:drawablePadding="12dp"
                    android:hint="@string/hint_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:minWidth="320dp"
                    android:minHeight="45dp"
                    android:paddingStart="12dp"
                    android:singleLine="true" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/txtViewValidateEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:text="Required"
                android:textSize="12dp"
                android:visibility="invisible" />

            <!--            <androidx.cardview.widget.CardView-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="wrap_content"-->
            <!--                android:layout_gravity="center"-->
            <!--                android:layout_margin="4dp"-->
            <!--                app:cardBackgroundColor="@color/colorTextInputBackground"-->
            <!--                app:cardCornerRadius="24dp"-->
            <!--                app:cardElevation="0dp">-->


            <!--&lt;!&ndash;                <com.google.android.material.textfield.TextInputEditText&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:id="@+id/et_username"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:layout_width="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:layout_height="wrap_content"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:layout_gravity="center"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:layout_marginLeft="12dp"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:layout_marginRight="12dp"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:background="@android:color/transparent"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:drawableStart="@drawable/ic_person"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:drawablePadding="12dp"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:hint="@string/hint_username"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:imeOptions="actionNext"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:minWidth="320dp"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:minHeight="45dp"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:paddingStart="12dp"&ndash;&gt;-->
            <!--&lt;!&ndash;                    android:singleLine="true" />&ndash;&gt;-->

            <!--            </androidx.cardview.widget.CardView>-->


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:boxBackgroundMode="none"
                    app:hintEnabled="false"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="12dp"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/ic_lock"
                        android:drawablePadding="12dp"
                        android:hint="@string/hint_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:minWidth="320dp"
                        android:minHeight="50dp"
                        android:paddingVertical="5dp"
                        android:paddingStart="12dp"
                        android:textSize="18sp"
                        app:hintEnabled="false" />
                </com.google.android.material.textfield.TextInputLayout>
            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:gravity="center_horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <TextView
                    android:layout_weight="1"
                    android:id="@+id/txtViewValidatePasswordRequired"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="24dp"
                    android:text="Required"
                    android:textSize="12dp"
                    android:visibility="visible" />
                <TextView
                    android:gravity="end"
                    android:layout_marginEnd="24dp"
                    android:layout_weight="1"
                    android:id="@+id/txtViewValidatePasswordLength"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="0/8"
                    android:textSize="12dp"
                    android:visibility="visible" />

            </LinearLayout>


            <!--    <TextView-->
            <!--        android:id="@+id/txtViewForgetPassword"-->
            <!--        android:layout_width="wrap_content"-->
            <!--        android:layout_height="wrap_content"-->
            <!--        android:layout_marginTop="12dp"-->
            <!--        android:layout_marginRight="5dp"-->
            <!--        android:text="Forget Password"-->
            <!--        app:layout_constraintBottom_toTopOf="@+id/bttnLogin"-->
            <!--        app:layout_constraintEnd_toEndOf="@+id/editTxtPassword"-->
            <!--        app:layout_constraintHorizontal_bias="1.0"-->
            <!--        app:layout_constraintStart_toStartOf="@+id/editTxtPassword"-->
            <!--        app:layout_constraintTop_toBottomOf="@+id/editTxtPassword"-->
            <!--        app:layout_constraintVertical_bias="0.629"-->
            <!--        app:layout_goneMarginTop="5dp" />-->

            <TextView
                android:id="@+id/txtViewValidatePasswordSpecial"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:layout_marginTop="2dp"
                android:text="1+ special character"
                android:textSize="12dp"
                android:visibility="visible" />


            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="4dp"
                app:cardBackgroundColor="@color/colorTextInputBackground"
                app:cardCornerRadius="24dp"
                app:cardElevation="0dp"></androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/button_signup"
                style="@style/Button1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="15dp"
                android:layout_marginTop="16dp"
                android:text="@string/button_sign_up" />

            <TextView
                android:id="@+id/terms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/text_signup_terms"
                android:textSize="13sp" />
        </LinearLayout>


    </ScrollView>
</RelativeLayout>